testing out a simplified implementation

--- a/test.ipynb
+++ b/test.ipynb
@@ -16,8 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/11/05 19:45:23 WARN Utils: Your hostname, DESKTOP-TVDS9T6 resolves to a loopback address: 127.0.1.1; using 172.29.38.221 instead (on interface eth0)\n",
-      "22/11/05 19:45:23 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "22/11/06 08:50:05 WARN Utils: Your hostname, DESKTOP-TVDS9T6 resolves to a loopback address: 127.0.1.1; using 172.29.38.221 instead (on interface eth0)\n",
+      "22/11/06 08:50:05 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -32,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/11/05 19:45:25 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/11/06 08:50:06 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -58,125 +58,140 @@
       "/home/ed/projects/dfender/.venv/lib/python3.8/site-packages/pyspark/sql/pandas/conversion.py:486: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
       "  for column, series in pdf.iteritems():\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   x  y\n",
-       "0  0  0\n",
-       "0  0  0\n",
-       "0  0  0\n",
-       "0  0  0\n",
-       "0  0  0\n",
-       "0  0  0\n",
-       "0  0  0\n",
-       "0  0  0\n",
-       "0  0  0\n",
-       "0  0  0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from dfender import distribute\n",
     "import pandas as pd\n",
     "import dask.dataframe as dd\n",
     "import pyspark.pandas as ps\n",
     "\n",
     "X = pd.DataFrame(zip(range(100), range(100)), columns=['x','y'])\n",
     "X_dask = dd.from_pandas(X, npartitions=1)\n",
-    "X_spark = spark.createDataFrame(X)\n",
+    "X_spark = spark.createDataFrame(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dask Series Structure:\n",
+       "npartitions=1\n",
+       "0     int64\n",
+       "99      ...\n",
+       "Name: x, dtype: int64\n",
+       "Dask Name: floordiv, 3 graph layers"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# from multipledispatch import dispatch\n",
+    "# import pandas as pd\n",
+    "\n",
+    "# def distributable(sig):\n",
+    "#     def decorator(func):\n",
+    "#         # Register the distributed implementations\n",
+    "#         dispatch((dd.Series, dd.DataFrame))(func)\n",
+    "\n",
+    "#         # Return the base implementation as well\n",
+    "#         return dispatch(sig)(func)\n",
+    "\n",
+    "#     return decorator\n",
+    "\n",
+    "# @distributable((pd.Series, pd.DataFrame))\n",
+    "# def test(df):\n",
+    "#     return df // 2\n",
+    "\n",
+    "# @dispatch((dd.Series, dd.DataFrame))\n",
+    "# def test(df):\n",
+    "#     return df * 2\n",
+    "\n",
+    "test(X_dask['x'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(pandas.core.series.Series,): <function __main__.test(df)>,\n",
+       " (pandas.core.frame.DataFrame,): <function __main__.test(df)>,\n",
+       " (int,): <function __main__.Test.test(df)>,\n",
+       " (dask.dataframe.core.Series,): <function __main__.test(df)>,\n",
+       " (dask.dataframe.core.DataFrame,): <function __main__.test(df)>}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "global_namespace['test'].funcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(pandas.core.series.Series,): <function __main__.Test.test(df)>,\n",
+       " (pandas.core.frame.DataFrame,): <function __main__.Test.test(df)>,\n",
+       " (int,): <function __main__.Test.test(df)>,\n",
+       " (dask.dataframe.core.Series,): <function __main__.Test.test(df)>,\n",
+       " (dask.dataframe.core.DataFrame,): <function __main__.Test.test(df)>}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dfender import distribute\n",
+    "from multipledispatch import dispatch\n",
+    "from multipledispatch.core import global_namespace\n",
+    "\n",
+    "def distributable(sig):\n",
+    "    def decorator(func):\n",
+    "        # Register the distributed implementations\n",
+    "        dispatch((dd.Series, dd.DataFrame))(func)\n",
+    "\n",
+    "        # Return the base implementation as well\n",
+    "        return dispatch(sig)(func)\n",
+    "\n",
+    "    return decorator\n",
     "\n",
     "class Test:\n",
-    "    @distribute\n",
-    "    def predict(self, X: pd.Series) -> pd.Series:\n",
-    "        return X == 2\n",
-    "        # return (pd.to_datetime('2000-01-01').to_period('M') + X).dt.to_timestamp()\n",
+    "    @distributable((pd.Series, pd.DataFrame))\n",
+    "    def test(df):\n",
+    "        return df // 4\n",
     "\n",
-    "    @distribute\n",
-    "    def rowmax(self, X: pd.DataFrame):\n",
-    "        return X.max(axis=1)\n",
+    "    @distributable(int)\n",
+    "    def test(df):\n",
+    "        return df == 0\n",
+    "\n",
+    "    # @distribute\n",
+    "    # def predict(self, X: pd.Series) -> pd.Series:\n",
+    "    #     return X == 2\n",
+    "    #     # return (pd.to_datetime('2000-01-01').to_period('M') + X).dt.to_timestamp()\n",
+    "\n",
+    "    # @distribute\n",
+    "    # def rowmax(self, X: pd.DataFrame):\n",
+    "    #     return X.max(axis=1)\n",
     "    # @dispatch(pd.DataFrame)\n",
     "    # def predict(self, X: pd.DataFrame) -> pd.Series:\n",
     "    #     return X * 2\n",
@@ -192,41 +207,20 @@
     "# est.predict(X_spark.select(['x']))\n",
     "# est.rowmax(X)\n",
     "# est.rowmax(X_)\n",
-    "\n",
-    "import pandera as pa\n",
-    "pa.infer_schema(X).example(size=10)"
+    "# Test.test.funcs\n",
+    "est.test.funcs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method example in module pandera.schemas:\n",
-      "\n",
-      "example(size: 'Optional[int]' = None, n_regex_columns: 'int' = 1) -> 'pd.DataFrame' method of pandera.schemas.DataFrameSchema instance\n",
-      "    Generate an example of a particular size.\n",
-      "    \n",
-      "    :param size: number of elements in the generated DataFrame.\n",
-      "    :returns: pandas DataFrame object.\n",
-      "\n",
-      "CPU times: user 3.38 ms, sys: 377 µs, total: 3.75 ms\n",
-      "Wall time: 2.66 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "pa.infer_schema(X).example()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +230,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m (pd\u001b[39m.\u001b[39;49mto_datetime(\u001b[39m'\u001b[39;49m\u001b[39m2000-01-01\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mto_period(\u001b[39m'\u001b[39;49m\u001b[39mM\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39m+\u001b[39;49m pd\u001b[39m.\u001b[39;49mDataFrame([], columns\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mx\u001b[39;49m\u001b[39m'\u001b[39;49m],dtype\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mint64\u001b[39;49m\u001b[39m'\u001b[39;49m)[\u001b[39m'\u001b[39;49m\u001b[39mx\u001b[39;49m\u001b[39m'\u001b[39;49m])\u001b[39m.\u001b[39;49mdt\u001b[39m.\u001b[39mto_timestamp()\n",
+      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m (pd\u001b[39m.\u001b[39;49mto_datetime(\u001b[39m'\u001b[39;49m\u001b[39m2000-01-01\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mto_period(\u001b[39m'\u001b[39;49m\u001b[39mM\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39m+\u001b[39;49m pd\u001b[39m.\u001b[39;49mDataFrame([], columns\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mx\u001b[39;49m\u001b[39m'\u001b[39;49m],dtype\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mint64\u001b[39;49m\u001b[39m'\u001b[39;49m)[\u001b[39m'\u001b[39;49m\u001b[39mx\u001b[39;49m\u001b[39m'\u001b[39;49m])\u001b[39m.\u001b[39;49mdt\u001b[39m.\u001b[39mto_timestamp()\n",
       "File \u001b[0;32m~/projects/dfender/.venv/lib/python3.8/site-packages/pandas/core/generic.py:5902\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5895\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   5896\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[1;32m   5897\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[1;32m   5898\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[1;32m   5899\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[1;32m   5900\u001b[0m ):\n\u001b[1;32m   5901\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[0;32m-> 5902\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
       "File \u001b[0;32m~/projects/dfender/.venv/lib/python3.8/site-packages/pandas/core/accessor.py:182\u001b[0m, in \u001b[0;36mCachedAccessor.__get__\u001b[0;34m(self, obj, cls)\u001b[0m\n\u001b[1;32m    179\u001b[0m \u001b[39mif\u001b[39;00m obj \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    180\u001b[0m     \u001b[39m# we're accessing the attribute of the class, i.e., Dataset.geo\u001b[39;00m\n\u001b[1;32m    181\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessor\n\u001b[0;32m--> 182\u001b[0m accessor_obj \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_accessor(obj)\n\u001b[1;32m    183\u001b[0m \u001b[39m# Replace the property with the accessor object. Inspired by:\u001b[39;00m\n\u001b[1;32m    184\u001b[0m \u001b[39m# https://www.pydanny.com/cached-property.html\u001b[39;00m\n\u001b[1;32m    185\u001b[0m \u001b[39m# We need to use object.__setattr__ because we overwrite __setattr__ on\u001b[39;00m\n\u001b[1;32m    186\u001b[0m \u001b[39m# NDFrame\u001b[39;00m\n\u001b[1;32m    187\u001b[0m \u001b[39mobject\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__setattr__\u001b[39m(obj, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_name, accessor_obj)\n",
       "File \u001b[0;32m~/projects/dfender/.venv/lib/python3.8/site-packages/pandas/core/indexes/accessors.py:512\u001b[0m, in \u001b[0;36mCombinedDatetimelikeProperties.__new__\u001b[0;34m(cls, data)\u001b[0m\n\u001b[1;32m    509\u001b[0m \u001b[39melif\u001b[39;00m is_period_dtype(data\u001b[39m.\u001b[39mdtype):\n\u001b[1;32m    510\u001b[0m     \u001b[39mreturn\u001b[39;00m PeriodProperties(data, orig)\n\u001b[0;32m--> 512\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mCan only use .dt accessor with datetimelike values\u001b[39m\u001b[39m\"\u001b[39m)\n",
