--- a/test.ipynb
+++ b/test.ipynb
@@ -4,38 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "your 131072x1 screen size is bogus. expect trouble\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/11/06 08:50:05 WARN Utils: Your hostname, DESKTOP-TVDS9T6 resolves to a loopback address: 127.0.1.1; using 172.29.38.221 instead (on interface eth0)\n",
-      "22/11/06 08:50:05 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/11/06 08:50:06 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
@@ -47,23 +16,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:'PYARROW_IGNORE_TIMEZONE' environment variable was not set. It is required to set this environment variable to '1' in both driver and executor sides if you use pyarrow>=2.0.0. pandas-on-Spark will set it for you but it does not work if there is a Spark context already launched.\n",
-      "/home/ed/projects/dfender/.venv/lib/python3.8/site-packages/pyspark/sql/pandas/conversion.py:474: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for column, series in pdf.iteritems():\n",
-      "/home/ed/projects/dfender/.venv/lib/python3.8/site-packages/pyspark/sql/pandas/conversion.py:486: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for column, series in pdf.iteritems():\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import dask.dataframe as dd\n",
-    "import pyspark.pandas as ps\n",
     "\n",
     "X = pd.DataFrame(zip(range(100), range(100)), columns=['x','y'])\n",
     "X_dask = dd.from_pandas(X, npartitions=1)\n",
@@ -72,133 +28,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Dask Series Structure:\n",
-       "npartitions=1\n",
-       "0     int64\n",
-       "99      ...\n",
-       "Name: x, dtype: int64\n",
-       "Dask Name: floordiv, 3 graph layers"
+       "{(pandas.core.series.Series,): <function __main__.Test.predict(self, X: pandas.core.series.Series) -> pandas.core.series.Series>,\n",
+       " (dask.dataframe.core.Series,): <function dfender.materializers.core.MaterializerInterface.map.<locals>.wrapper(_, df: 'Any', *args, **kwargs)>,\n",
+       " (pyspark.sql.dataframe.DataFrame,): <function dfender.materializers.core.MaterializerInterface.map.<locals>.wrapper(_, df: 'Any', *args, **kwargs)>}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# from multipledispatch import dispatch\n",
-    "# import pandas as pd\n",
-    "\n",
-    "# def distributable(sig):\n",
-    "#     def decorator(func):\n",
-    "#         # Register the distributed implementations\n",
-    "#         dispatch((dd.Series, dd.DataFrame))(func)\n",
-    "\n",
-    "#         # Return the base implementation as well\n",
-    "#         return dispatch(sig)(func)\n",
-    "\n",
-    "#     return decorator\n",
-    "\n",
-    "# @distributable((pd.Series, pd.DataFrame))\n",
-    "# def test(df):\n",
-    "#     return df // 2\n",
-    "\n",
-    "# @dispatch((dd.Series, dd.DataFrame))\n",
-    "# def test(df):\n",
-    "#     return df * 2\n",
-    "\n",
-    "test(X_dask['x'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{(pandas.core.series.Series,): <function __main__.test(df)>,\n",
-       " (pandas.core.frame.DataFrame,): <function __main__.test(df)>,\n",
-       " (int,): <function __main__.Test.test(df)>,\n",
-       " (dask.dataframe.core.Series,): <function __main__.test(df)>,\n",
-       " (dask.dataframe.core.DataFrame,): <function __main__.test(df)>}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "global_namespace['test'].funcs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{(pandas.core.series.Series,): <function __main__.Test.test(df)>,\n",
-       " (pandas.core.frame.DataFrame,): <function __main__.Test.test(df)>,\n",
-       " (int,): <function __main__.Test.test(df)>,\n",
-       " (dask.dataframe.core.Series,): <function __main__.Test.test(df)>,\n",
-       " (dask.dataframe.core.DataFrame,): <function __main__.Test.test(df)>}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from dfender import distribute\n",
-    "from multipledispatch import dispatch\n",
-    "from multipledispatch.core import global_namespace\n",
-    "\n",
-    "def distributable(sig):\n",
-    "    def decorator(func):\n",
-    "        # Register the distributed implementations\n",
-    "        dispatch((dd.Series, dd.DataFrame))(func)\n",
-    "\n",
-    "        # Return the base implementation as well\n",
-    "        return dispatch(sig)(func)\n",
-    "\n",
-    "    return decorator\n",
+    "from dfender import distributable\n",
     "\n",
     "class Test:\n",
+    "    @distributable(pd.Series)\n",
+    "    def predict(self, X: pd.Series) -> pd.Series:\n",
+    "        return X == 2\n",
+    "        # return (pd.to_datetime('2000-01-01').to_period('M') + X).dt.to_timestamp()\n",
+    "\n",
     "    @distributable((pd.Series, pd.DataFrame))\n",
-    "    def test(df):\n",
-    "        return df // 4\n",
-    "\n",
-    "    @distributable(int)\n",
-    "    def test(df):\n",
-    "        return df == 0\n",
-    "\n",
-    "    # @distribute\n",
-    "    # def predict(self, X: pd.Series) -> pd.Series:\n",
-    "    #     return X == 2\n",
-    "    #     # return (pd.to_datetime('2000-01-01').to_period('M') + X).dt.to_timestamp()\n",
-    "\n",
-    "    # @distribute\n",
-    "    # def rowmax(self, X: pd.DataFrame):\n",
-    "    #     return X.max(axis=1)\n",
-    "    # @dispatch(pd.DataFrame)\n",
-    "    # def predict(self, X: pd.DataFrame) -> pd.Series:\n",
-    "    #     return X * 2\n",
-    "\n",
-    "    # @dispatch(dd.DataFrame)\n",
-    "    # def predict(self, X: dd.DataFrame) -> dd.Series:\n",
-    "    #     return X / 2\n",
+    "    def rowmax(self, X: pd.DataFrame):\n",
+    "        return X.max(axis=1)\n",
     "\n",
     "\n",
     "est = Test()\n",
@@ -208,15 +65,39 @@
     "# est.rowmax(X)\n",
     "# est.rowmax(X_)\n",
     "# Test.test.funcs\n",
-    "est.test.funcs"
+    "est.predict.funcs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     False\n",
+       "1     False\n",
+       "2      True\n",
+       "3     False\n",
+       "4     False\n",
+       "      ...  \n",
+       "95    False\n",
+       "96    False\n",
+       "97    False\n",
+       "98    False\n",
+       "99    False\n",
+       "Name: x, Length: 100, dtype: bool"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "est.predict(X['x'])"
+   ]
   },
   {
    "cell_type": "code",
@@ -224,178 +105,50 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "Can only use .dt accessor with datetimelike values",
+     "data": {
+      "text/plain": [
+       "0     False\n",
+       "1     False\n",
+       "2      True\n",
+       "3     False\n",
+       "4     False\n",
+       "      ...  \n",
+       "95    False\n",
+       "96    False\n",
+       "97    False\n",
+       "98    False\n",
+       "99    False\n",
+       "Name: x, Length: 100, dtype: bool"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "est.predict(X_dask['x']).compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_spark' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m (pd\u001b[39m.\u001b[39;49mto_datetime(\u001b[39m'\u001b[39;49m\u001b[39m2000-01-01\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mto_period(\u001b[39m'\u001b[39;49m\u001b[39mM\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39m+\u001b[39;49m pd\u001b[39m.\u001b[39;49mDataFrame([], columns\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mx\u001b[39;49m\u001b[39m'\u001b[39;49m],dtype\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mint64\u001b[39;49m\u001b[39m'\u001b[39;49m)[\u001b[39m'\u001b[39;49m\u001b[39mx\u001b[39;49m\u001b[39m'\u001b[39;49m])\u001b[39m.\u001b[39;49mdt\u001b[39m.\u001b[39mto_timestamp()\n",
-      "File \u001b[0;32m~/projects/dfender/.venv/lib/python3.8/site-packages/pandas/core/generic.py:5902\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5895\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   5896\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[1;32m   5897\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[1;32m   5898\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[1;32m   5899\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[1;32m   5900\u001b[0m ):\n\u001b[1;32m   5901\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[0;32m-> 5902\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
-      "File \u001b[0;32m~/projects/dfender/.venv/lib/python3.8/site-packages/pandas/core/accessor.py:182\u001b[0m, in \u001b[0;36mCachedAccessor.__get__\u001b[0;34m(self, obj, cls)\u001b[0m\n\u001b[1;32m    179\u001b[0m \u001b[39mif\u001b[39;00m obj \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    180\u001b[0m     \u001b[39m# we're accessing the attribute of the class, i.e., Dataset.geo\u001b[39;00m\n\u001b[1;32m    181\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessor\n\u001b[0;32m--> 182\u001b[0m accessor_obj \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_accessor(obj)\n\u001b[1;32m    183\u001b[0m \u001b[39m# Replace the property with the accessor object. Inspired by:\u001b[39;00m\n\u001b[1;32m    184\u001b[0m \u001b[39m# https://www.pydanny.com/cached-property.html\u001b[39;00m\n\u001b[1;32m    185\u001b[0m \u001b[39m# We need to use object.__setattr__ because we overwrite __setattr__ on\u001b[39;00m\n\u001b[1;32m    186\u001b[0m \u001b[39m# NDFrame\u001b[39;00m\n\u001b[1;32m    187\u001b[0m \u001b[39mobject\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__setattr__\u001b[39m(obj, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_name, accessor_obj)\n",
-      "File \u001b[0;32m~/projects/dfender/.venv/lib/python3.8/site-packages/pandas/core/indexes/accessors.py:512\u001b[0m, in \u001b[0;36mCombinedDatetimelikeProperties.__new__\u001b[0;34m(cls, data)\u001b[0m\n\u001b[1;32m    509\u001b[0m \u001b[39melif\u001b[39;00m is_period_dtype(data\u001b[39m.\u001b[39mdtype):\n\u001b[1;32m    510\u001b[0m     \u001b[39mreturn\u001b[39;00m PeriodProperties(data, orig)\n\u001b[0;32m--> 512\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mCan only use .dt accessor with datetimelike values\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: Can only use .dt accessor with datetimelike values"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m est\u001b[39m.\u001b[39mpredict(X_spark[\u001b[39m'\u001b[39m\u001b[39mx\u001b[39m\u001b[39m'\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_spark' is not defined"
      ]
     }
    ],
    "source": [
-    "(pd.to_datetime('2000-01-01').to_period('M') + pd.DataFrame([], columns=['x'],dtype='int64')['x']).dt.to_timestamp()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'bigint'"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spark.createDataFrame(pd.DataFrame([0])).schema[0].dataType.simpleString()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ed/projects/dfender/.venv/lib/python3.8/site-packages/pyspark/sql/pandas/conversion.py:474: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for column, series in pdf.iteritems():\n",
-      "/home/ed/projects/dfender/.venv/lib/python3.8/site-packages/pyspark/sql/pandas/conversion.py:486: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for column, series in pdf.iteritems():\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'0'"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spark.createDataFrame(pd.DataFrame([0])).schema[0].name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'sql_ctx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [115], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpyspark\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m pyspark\u001b[39m.\u001b[39;49msql\u001b[39m.\u001b[39;49mDataFrame(X)\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'sql_ctx'"
-     ]
-    }
-   ],
-   "source": [
-    "import pyspark\n",
-    "pyspark.sql.DataFrame(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'x bigint, y bigint'"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def native_meta(df: pd.DataFrame):\n",
-    "    # Parse out the spark udf signature from the derived datatypes\n",
-    "    df_spark = spark.createDataFrame(df)\n",
-    "    dtypes = {\n",
-    "        element.name : element.dataType.simpleString() for element in df_spark.schema\n",
-    "    }\n",
-    "    return ', '.join([f\"{col} {dtype}\" for col, dtype in dtypes.items()])\n",
-    "\n",
-    "native_meta(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "x    int64\n",
-       "y    int64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dtypes = X_spark.pandas_api().dtypes.to_dict()\n",
-    "meta = pd.DataFrame({col : pd.Series(dtype=dtype) for col, dtype in dtypes.items()})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:'PYARROW_IGNORE_TIMEZONE' environment variable was not set. It is required to set this environment variable to '1' in both driver and executor sides if you use pyarrow>=2.0.0. pandas-on-Spark will set it for you but it does not work if there is a Spark context already launched.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Dfender Materializer Registry\n",
-       "\n",
-       "Implementations: \n",
-       "dask: [<class 'dask.dataframe.core.Series'>, <class 'dask.dataframe.core.DataFrame'>]\n",
-       "spark: [<class 'pyspark.pandas.series.Series'>, <class 'pyspark.pandas.frame.DataFrame'>]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from dfender.materializers import materializer\n",
-    "\n",
-    "materializer"
+    "est.predict(X_spark['x'])"
    ]
   }
  ],
